# neural

./: CMakeLists.txt  build.sh  main.cpp
include/: layer.hpp  network.hpp
math/: CMakeLists.txt  build.sh
math/include/: math.hpp  matrix.hpp
math/src/: math.cpp  matrix.cpp
math/test/: CMakeLists.txt  main.cpp  math.cpp  matrix.cpp
math/test/matrix/: matrix.cpp
src/: layer.cpp  main.cpp  network.cpp
test/: CMakeLists.txt  network.cpp
